# jarvis

./: .env.example  README.md  install.sh  pyproject.toml
config/: models.toml
jarvis/: cli.py  config.py  ollama.py
scripts/: configure-ollama.sh  install-ollama.sh  preflight.sh  setup.sh
